# Alpha-Signal-Generator

./: .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  custom_backtest.py  docker-compose.yml  docker-serve.py  example.py  pyproject.toml  railway.json  render.yaml  render.yml  requirements.txt  sample_config.json  start_app.py  test_advanced_live_system.py  test_custom_backtest.py  test_engine.py  test_stateful_simulation.py  vercel.json
.github/workflows/: ci.yml
alpha_signal_engine/: __init__.py  advanced_risk_manager.py  advanced_signals.py  alpaca_feed.py  backtester.py  bayesian_optimizer.py  cli.py  config.py  data_loader.py  engine.py  ensemble_signal_generator.py  factor_strategy.py  live_signal_generator.py  multi_timeframe_strategy.py  performance_analyzer.py  performance_attributor.py  realtime_feed.py  rl_position_sizer.py  signal_generator.py  transaction_costs.py  visualizer.py  walk_forward.py  yahoo_feed.py
backend/: Dockerfile  app.py  requirements.txt
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  api.ts  index.css  index.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Backtesting.tsx  Dashboard.tsx  MLInsights.tsx  Optimization.tsx  RealTime.tsx  Risk.tsx  Settings.tsx  Signals.tsx
tests/: test_engine_basic.py
